bug fix for #interactive section

--- a/index.html
+++ b/index.html
@@ -133,14 +133,15 @@
     <!-- TODO: Fix this section -->
     <section class="interactive-page service-section">
       <div class="service-card reverse">
-        <div class="service-image col">
+        <div class="service-image">
           <img class="box-shadow-right" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="video shoot scene in a library" width="500" height="330">
         </div>
-        <div class="service-card-text video-text col">
+        <div class="service-card-text">
           <h3 class="service-card-title">Interactive Content </h3>
           <p>We offer services and licensing to create interactive features for your course. H5P, Everiz, Captivate etc. to create various interactives depending on what aligns best for your content and objectives. All services have been throughly tested with accessibility and user experience the forefront.</p>
           <a class="view-more" href="./portfolio.html#interactive">View More</a>
         </div>
+      </div>
     </section>
   </main>
 
