Updated class names for readability

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
         <div class="service-card-text video-text col">
           <h3 class="service-card-title">Video & Audio </h3>
           <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
-          <a class="view-more" href="./portfolio.html#video">View More</a>
+          <a class="view-more" href="./pages/portfolio.html#video">View More</a>
         </div>
       </div>
     </section>
-    
+
     <section class="design-section service-section">
       <div class="service-card">
         <div class="service-image">
@@ -126,11 +126,11 @@
         <div class="service-card-text">
           <h3 id="design" class="service-card-title">Design & Graphics</h3>
           <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
-          <a href="./portfolio.html#design" class="view-more">View More</a>
+          <a href="./pages/portfolio.html#design" class="view-more">View More</a>
         </div>
       </div>
     </section>
-    <!-- TODO: Fix this section -->
+
     <section class="interactive-page service-section">
       <div class="service-card reverse">
         <div class="service-image">
@@ -139,15 +139,14 @@
         <div class="service-card-text">
           <h3 class="service-card-title">Interactive Content </h3>
           <p>We offer services and licensing to create interactive features for your course. H5P, Everiz, Captivate etc. to create various interactives depending on what aligns best for your content and objectives. All services have been throughly tested with accessibility and user experience the forefront.</p>
-          <a class="view-more" href="./portfolio.html#interactive">View More</a>
+          <a class="view-more" href="./pages/portfolio.html#interactive">View More</a>
         </div>
       </div>
     </section>
   </main>
 
 <!-- FOOTER -->
-
-  <footer class="blue">
+  <footer class="dark-blue-500">
     <!-- Logo -->
     <div class="footer-text-logo">
       <a href="#" tabindex="0" class="wc-brand">
