--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -209,7 +209,7 @@
     </iframe>
   </section>
   
-  <footer class="blue">
+  <footer class="dark-blue-500">
     <!-- Logo -->
     <div class="footer-text-logo">
       <a href="#" tabindex="0" class="wc-brand">
