--- a/pages/contact.html
+++ b/pages/contact.html
@@ -121,7 +121,7 @@
 
 <!-- FOOTER -->
 
-<footer class="blue">
+<footer class="dark-blue-500">
   <!-- Logo -->
   <div class="footer-text-logo">
     <a href="#" tabindex="0" class="wc-brand">
