--- a/pages/journal.html
+++ b/pages/journal.html
@@ -172,7 +172,7 @@
     </div> 
   </section> 
 
-  <footer class="blue">
+  <footer class="dark-blue-500">
     <!-- Logo -->
     <div class="footer-text-logo">
       <a href="#" tabindex="0" class="wc-brand">
