--- a/pages/resources.html
+++ b/pages/resources.html
@@ -84,7 +84,7 @@
     <h2>Documentation for videoshoots, self-recording best practices</h2>
   </section>
 
-  <footer class="blue">
+  <footer class="dark-blue-500">
     <!-- Logo -->
     <div class="footer-text-logo">
       <a href="#" tabindex="0" class="wc-brand">
