--- a/index.html
+++ b/index.html
@@ -70,75 +70,78 @@
   </header>
 
   <main class="home">
-    <section class="hero">
-      <div class="carousel-container" id="carousel-imgs" role="region" aria-label="carousel">
-        <img class="carousel-img" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-1" >
+    <section class="hero-section">
+      <div class="hero">
+        <div class="carousel-container" id="carousel-imgs" role="region" aria-label="carousel">
+          <img class="carousel-img" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-1" >
 
-        <img class="carousel-img" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-2">
+          <img class="carousel-img" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-2">
 
-        <img class="carousel-img" src ="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="laptop sitting on a desk" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-3">
-      </div>
-      <!-- Next/prev buttons -->
-      <a class="prev" id="left" role="group" aria-label="slide controls previous" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" id="right" role="group" aria-label="slide controls next" onclick="plusSlides(1)">&#10095;</a>
-        
-      <div class="dot-container">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-      </div>
-      <div class="title-section">
-        <h1>MM Studio</h1>
-        <h2>Welcome to our space.</h2>
-      </div>
-
-      <button class="btn-1"><a class="explore-button" href="#service_section_title">EXPLORE <span><svg class="animation" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-        <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H0V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#1a3651"/>
-      </svg>
-      </span></a></button>
-    </section>
-    <section class="weAre">
-      <p class="right">"...we create amazing content."</p>
-    </section>
-
-    <h2 id="service_section_title" class="service-section-title center blue-underline">What We Do</h2>
-
-    <section id="video-section" class="video-section service-section">
-      <div class="service-card reverse">
-        <div class="service-image">
-          <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
+          <img class="carousel-img" src ="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="laptop sitting on a desk" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-3">
+        </div>
+        <!-- Next/prev buttons -->
+        <a class="prev" id="left" role="group" aria-label="slide controls previous" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" id="right" role="group" aria-label="slide controls next" onclick="plusSlides(1)">&#10095;</a>
+          
+        <div class="dot-container">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+        <div class="title-section">
+          <h1>MM Studio</h1>
+          <h2>Welcome to our space.</h2>
         </div>
 
-        <div class="service-card-text video-text col">
-          <h3 class="service-card-title">Video & Audio </h3>
-          <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
-          <a class="view-more" href="./pages/portfolio.html#video">View More</a>
-        </div>
+        <button class="btn-1"><a class="explore-button" href="#service_section_title">EXPLORE <span><svg class="animation" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+          <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H0V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#1a3651"/>
+        </svg>
+        </span></a></button>
+      </div>
+      <div class="weAre">
+        <p class="right">"...we create amazing content."</p>
       </div>
     </section>
 
-    <section class="design-section service-section">
-      <div class="service-card">
-        <div class="service-image">
-          <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
-        </div>
-        <div class="service-card-text">
-          <h3 id="design" class="service-card-title">Design & Graphics</h3>
-          <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
-          <a href="./pages/portfolio.html#design" class="view-more">View More</a>
+    <section>
+      <h2 id="service_section_title" class="service-section-title center blue-underline">What We Do</h2>
+      <div id="video-section" class="video-section service-section">
+        <div class="service-card reverse">
+          <div class="service-image">
+            <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
+          </div>
+
+          <div class="service-card-text video-text col">
+            <h3 class="service-card-title">Video & Audio </h3>
+            <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+            <a class="view-more" href="./pages/portfolio.html#video">View More</a>
+          </div>
         </div>
       </div>
-    </section>
 
-    <section class="interactive-page service-section">
-      <div class="service-card reverse">
-        <div class="service-image">
-          <img class="box-shadow-right" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="video shoot scene in a library" width="500" height="330">
+      <div class="design-section service-section">
+        <div class="service-card">
+          <div class="service-image">
+            <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
+          </div>
+          <div class="service-card-text">
+            <h3 id="design" class="service-card-title">Design & Graphics</h3>
+            <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
+            <a href="./pages/portfolio.html#design" class="view-more">View More</a>
+          </div>
         </div>
-        <div class="service-card-text">
-          <h3 class="service-card-title">Interactive Content </h3>
-          <p>We offer services and licensing to create interactive features for your course. H5P, Everiz, Captivate etc. to create various interactives depending on what aligns best for your content and objectives. All services have been throughly tested with accessibility and user experience the forefront.</p>
-          <a class="view-more" href="./pages/portfolio.html#interactive">View More</a>
+      </div>
+
+      <div class="interactive-page service-section">
+        <div class="service-card reverse">
+          <div class="service-image">
+            <img class="box-shadow-right" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="video shoot scene in a library" width="500" height="330">
+          </div>
+          <div class="service-card-text">
+            <h3 class="service-card-title">Interactive Content </h3>
+            <p>We offer services and licensing to create interactive features for your course. H5P, Everiz, Captivate etc. to create various interactives depending on what aligns best for your content and objectives. All services have been throughly tested with accessibility and user experience the forefront.</p>
+            <a class="view-more" href="./pages/portfolio.html#interactive">View More</a>
+          </div>
         </div>
       </div>
     </section>
