Spacing updates to index

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="services-info">
       <h2 id="service_section_title" class="service-section-title center blue-underline">What We Do</h2>
       <div id="video-section" class="video-section service-section">
         <div class="service-card reverse">
