--- a/pages/journal.html
+++ b/pages/journal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MM - Resources</title>
+  <title>MM - Journal</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="../styles/journal.css">
@@ -28,7 +28,7 @@
             <img src="../assets/images/WCLD_white.png" alt="Logo" class="logo">
           </a>
           <ul class="list">
-            <li><a href="/pages/services.html">What We Do</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="#">Portfolio</a></li>
             <li>
               <ul>
@@ -51,7 +51,6 @@
     <nav class="dark-blue-500 explore-nav" id="main_nav">
       <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
       <ul>
-        <li tabindex="0"><a href="services.html">What We Do</a></li>
         <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
           <div class="nav-dropdown">
             <ul>
