--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="../styles/portfolio.css">
+  <link rel="stylesheet" href="../styles/services.css">
 </head>
 <body class="services">
   <header>
@@ -168,30 +169,33 @@
       <p>Short intro text explaining Before and After example section?</p>
       <p>Do we add about course refreshments? Everiz/highcharts?</p>
 <!-- TODO update responsive images -->
-      <h3>500x500 Vertical</h3>
-        <div class="before-after-container">
-          <div class="before-section">
-            <h3 class="before-title">Before</h3>
-            <img src="/assets/images/MBADM830_Before.png" alt="" class="before-image"  loading="lazy">
-          </div>
-          <div class="divider"></div>
-          <div class="after-section">
-            <h3 class="after-title">After</h3>
-            <img src="/assets/images/MBADM830_After.png" alt=""  class="after-image" loading="lazy">
-          </div>
+    <h3>500x500 Vertical</h3>
+      <div class="before-after-container">
+        <div class="before-section">
+          <h3 class="before-title">Before</h3>
+          <img src="/assets/images/MBADM830_Before.png" alt="" class="before-image"  loading="lazy">
         </div>
+        <div class="divider"></div>
+        <div class="after-section">
+          <h3 class="after-title">After</h3>
+          <img src="/assets/images/MBADM830_After.png" alt=""  class="after-image" loading="lazy">
+        </div>
+      </div>
       <h3>Horizontal</h3>
-        <div class="before-after-container">
-          <div class="before-section-horizontal">
-            <h3 class="before-title">Before</h3>
-            <img src="/assets/images/MBADM830_Before_L8.png" alt="" class="before-image" loading="lazy">
-          </div>
-          <div class="divider-horizontal"></div>
-          <div class="after-section-horizontal">
-            <h3 class="after-title">After</h3>
-            <img src="/assets/images/MBADM830_After_L8.png" alt="" class="after-image" loading="lazy">
-          </div>
-  </section>
+      <div class="before-after-container">
+        <div class="before-section-horizontal">
+          <h3 class="before-title">Before</h3>
+          <img src="/assets/images/MBADM830_Before_L8.png" alt="" class="before-image" loading="lazy">
+        </div>
+        <div class="divider-horizontal"></div>
+        <div class="after-section-horizontal">
+          <h3 class="after-title">After</h3>
+          <img src="/assets/images/MBADM830_After_L8.png" alt="" class="after-image" loading="lazy">
+        </div>
+      </div>
+      <!-- TODO: update sizing -->
+      <a class="view-more" href="/pages/extra-examples.html">More Examples</a>
+    </section>
 
   <section id="interactive" class="interactive-page">
     <h2 class="center">Interactive</h2>
