--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,8 +7,8 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="../styles/portfolio.css">
   <link rel="stylesheet" href="../styles/services.css">
+  <link rel="stylesheet" href="../styles/portfolio.css">
 </head>
 <body class="services">
   <header>
@@ -182,19 +182,22 @@
         </div>
       </div>
       <h3>Horizontal</h3>
-      <div class="before-after-container">
-        <div class="before-section-horizontal">
-          <h3 class="before-title">Before</h3>
-          <img src="/assets/images/MBADM830_Before_L8.png" alt="" class="before-image" loading="lazy">
+      <div class="horizontal-image-container">
+        <div class="before-after-container">
+          <div class="before-section-horizontal">
+            <h3 class="before-title">Before</h3>
+            <img src="/assets/images/MBADM830_Before_L8.png" alt="" class="before-image" loading="lazy">
+          </div>
+          <div class="divider-horizontal"></div>
+          <div class="after-section-horizontal">
+            <h3 class="after-title">After</h3>
+            <img src="/assets/images/MBADM830_After_L8.png" alt="" class="after-image" loading="lazy">
+          </div>
         </div>
-        <div class="divider-horizontal"></div>
-        <div class="after-section-horizontal">
-          <h3 class="after-title">After</h3>
-          <img src="/assets/images/MBADM830_After_L8.png" alt="" class="after-image" loading="lazy">
-        </div>
+         <a class="view-more more-examples" href="/pages/extra-examples.html">More Examples</a>
       </div>
       <!-- TODO: update sizing -->
-      <a class="view-more" href="/pages/extra-examples.html">More Examples</a>
+      
     </section>
 
   <section id="interactive" class="interactive-page">
