btn margin-right fix

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -188,7 +188,7 @@
             <h3 class="before-title">Before</h3>
             <img src="/assets/images/MBADM830_Before_L8.png" alt="" class="before-image" loading="lazy">
           </div>
-          <div class="divider-horizontal"></div>
+          <div class="divider"></div>
           <div class="after-section-horizontal">
             <h3 class="after-title">After</h3>
             <img src="/assets/images/MBADM830_After_L8.png" alt="" class="after-image" loading="lazy">
