--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <h2 id="service_section_title" class="service-section-title center blue-underline">What We Do</h2>
       <div id="video-section" class="video-section service-section">
         <div class="service-card reverse">
-          <div class="service-image">
+          <div class="service-image-container">
             <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
           </div>
 
@@ -121,7 +121,7 @@
 
       <div class="design-section service-section">
         <div class="service-card">
-          <div class="service-image">
+          <div class="service-image-container">
             <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
           </div>
           <div class="service-card-text">
@@ -134,7 +134,7 @@
 
       <div class="interactive-page service-section">
         <div class="service-card reverse">
-          <div class="service-image">
+          <div class="service-image-container">
             <img class="box-shadow-right" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="video shoot scene in a library" width="500" height="330">
           </div>
           <div class="service-card-text">
