--- a/pages/services.html
+++ b/pages/services.html
@@ -88,7 +88,7 @@
 
   <section id="video-section" class="video-section">
     <div class="service-card reverse">
-      <div class="service-image">
+      <div class="service-image-container">
         <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
       </div>
 
@@ -102,7 +102,7 @@
   
   <section class="design-section">
     <div class="service-card">
-      <div class="service-image">
+      <div class="service-image-container">
         <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
       </div>
       <div class="service-card-text">
@@ -114,7 +114,7 @@
   </section>
   <section class="interactive-page">
     <div class="service-card reverse">
-      <div class="service-image col">
+      <div class="service-image-container col">
         <img class="box-shadow-right" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="video shoot scene in a library" width="500" height="330">
       </div>
 
