classes added to section intro

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -166,8 +166,7 @@
   
   <section id="design" class="design-section">
     <h2 class="center">Design</h2>
-      <p>Short intro text explaining Before and After example section?</p>
-      <p>Do we add about course refreshments? Everiz/highcharts?</p>
+      <p class="section-intro-content">Short intro text explaining Before and After example section? Do we add about course refreshments? Everiz/highcharts?</p>
 <!-- TODO update responsive images -->
     <h3>500x500 Vertical</h3>
       <div class="before-after-container">
@@ -202,7 +201,7 @@
 
   <section id="interactive" class="interactive-page">
     <h2 class="center">Interactive</h2>
-    <p> From our H5P instance, demonstrating various content types and offering inspiration for transforming course materials into engaging, interactive experiences.</p>
+    <p class="section-intro-content"> From our H5P instance, demonstrating various content types and offering inspiration for transforming course materials into engaging, interactive experiences.</p>
     <div style="min-width: 750px; max-width: 1080px;">
       <iframe allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *" allowfullscreen="allowfullscreen" aria-label="OL3400_SignificantLearning" frameborder="0" height="637" src="https://psu.h5p.com/content/1291925922613556468/embed" width="1088">
       </iframe>
